--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 #Dependecies
 compose-bom = "2024.02.02"
 compose-nav="2.7.1"
+hiltNavigationCompose = "1.2.0"
 material-icon = "1.6.4"
 activity-compose = "1.8.2"
 androidx-core-ktx = "1.12.0"
@@ -23,6 +24,7 @@ googleServicesVersion = "4.4.1"
 
 
 [libraries]
+androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
 compoose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "compose-bom" }
 compoose-nav = { module = "androidx.navigation:navigation-compose",version.ref = "compose-nav" }
 ui = { group = "androidx.compose.ui", name = "ui" }
