--- a/Arduino/Thermometer-Arduino/platformio.ini
+++ b/Arduino/Thermometer-Arduino/platformio.ini
@@ -8,7 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:upesy_wroom]
+[env:espwroom32]
 platform = espressif32
-board = upesy_wroom
 framework = arduino
+board = upesy_wroom
+monitor_speed = 115200
+lib_deps = 
+	adafruit/DHT sensor library@^1.4.6
+	adafruit/Adafruit Unified Sensor@^1.1.14
